--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,23 @@
-/* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  *,
+  *::after,
+  *::before {
+    box-sizing: border-box;
+  }
+  body {
+    color: black;
+    background: white;
+    font-family: "roboto", sans-serif;
+    font-size: 16px;
+  }
+}
+
+@layer utilities {
+  .fill-yellow-500-important {
+    fill: theme("colors.yellow.400") !important;
+  }
+}
