--- a/src/app/Components/button/button.component.html
+++ b/src/app/Components/button/button.component.html
@@ -1,5 +1,16 @@
-<button
-  class="rounded-xl border-[1px] border-solid border-slate-400 px-3 py-1 transition-all duration-200 hover:bg-blue-500 hover:text-white active:scale-105"
->
-  {{ text }}
-</button>
+<ng-container *ngIf="icon === ''; else buttonWithoutIcon">
+  <button
+    class="rounded-xl border-[1px] border-solid border-slate-400 px-3 py-1 transition-all duration-100 ease-linear hover:bg-blue-500 hover:text-white active:bg-blue-600"
+  >
+    {{ text }}
+  </button>
+</ng-container>
+
+<ng-template #buttonWithoutIcon>
+  <button
+    class="flex items-center gap-2 rounded-xl border-[1px] border-solid border-slate-400 px-3 py-1 transition-all duration-100 ease-linear hover:bg-blue-500 hover:text-white active:bg-blue-600"
+  >
+    <i-feather [name]="icon" [class]="iconClass"></i-feather>
+    <p class="text-[14px]">{{ text }}</p>
+  </button>
+</ng-template>
