--- a/src/app/Components/product-grid/product-grid.component.html
+++ b/src/app/Components/product-grid/product-grid.component.html
@@ -1,4 +1,6 @@
-<div class="mx-auto my-4 grid grid-cols-4">
+<div
+  class="my-4 grid grid-cols-1 gap-y-4 md:grid-cols-2 lg:mx-auto lg:grid-cols-6"
+>
   <app-card
     *ngFor="let item of data"
     [product]="item"
