--- a/src/styles.css
+++ b/src/styles.css
@@ -13,11 +13,24 @@
     background: white;
     font-family: "roboto", sans-serif;
     font-size: 16px;
+    line-height: normal;
   }
 }
 
 @layer utilities {
   .fill-yellow-500-important {
     fill: theme("colors.yellow.400") !important;
+  }
+  .w-22px-important {
+    width: 22px !important;
+  }
+  .h-22px-important {
+    height: 22px !important;
+  }
+  .w-18px-important {
+    width: 18px !important;
+  }
+  .h-18px-important {
+    height: 18px !important;
   }
 }
