--- a/src/styles.css
+++ b/src/styles.css
@@ -33,4 +33,12 @@
   .h-18px-important {
     height: 18px !important;
   }
+  .w-100svw {
+    width: 100vw;
+    width: 100svw;
+  }
+  .w-100svh {
+    height: 100vh;
+    height: 100svh;
+  }
 }
