feat(home page): section selling points has been implemented style(product-grid): changes responsivity has been implemented

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,1 +1,4 @@
-<app-product-grid></app-product-grid>
+<section class="mx-auto my-0 max-w-[80vw] p-0">
+  <app-selling-points></app-selling-points>
+  <app-product-grid></app-product-grid>
+</section>
