--- a/src/app/pages/home-page/components/product-grid/product-grid.component.html
+++ b/src/app/pages/home-page/components/product-grid/product-grid.component.html
@@ -1,9 +1,9 @@
 <div
-  class="my-4 grid grid-cols-1 gap-y-4 md:grid-cols-2 lg:mx-auto lg:grid-cols-6"
+  class="my-4 grid grid-cols-1 gap-y-4 md:grid-cols-2 md:gap-x-32 lg:mx-auto lg:grid-cols-5 lg:gap-x-16"
 >
   <app-card
     *ngFor="let item of data"
     [product]="item"
-    class="grid place-content-center"
+    class="mx-auto my-0 grid w-fit place-content-center"
   ></app-card>
 </div>
