--- a/src/app/components/header/navbar/navbar.component.html
+++ b/src/app/components/header/navbar/navbar.component.html
@@ -158,26 +158,26 @@
   </figure>
   <ul class="flex gap-20 text-white">
     <li
-      class="relative flex cursor-pointer items-center justify-between rounded-lg py-4 text-lg after:absolute after:top-11 after:h-[4px] after:w-0 after:transition-all after:duration-300 after:ease-in-out after:content-[''] after:hover:w-full after:hover:bg-blue-400"
+      class="relative flex cursor-pointer items-center justify-between rounded-lg py-2 text-base after:absolute after:top-8 after:h-[4px] after:w-0 after:transition-all after:duration-300 after:ease-in-out after:content-[''] after:hover:w-full after:hover:bg-blue-400"
     >
       <span>Shop</span>
       <i-feather
         name="chevron-right"
-        class="w-20px-important h-20px-important cursor-pointer text-white"
+        class="w-20px-important h-18px-important cursor-pointer text-white"
       ></i-feather>
     </li>
     <li
-      class="relative flex cursor-pointer items-center justify-between rounded-lg py-4 text-lg after:absolute after:top-11 after:h-[4px] after:w-0 after:transition-all after:duration-300 after:ease-in-out after:content-[''] after:hover:w-full after:hover:bg-blue-400"
+      class="relative flex cursor-pointer items-center justify-between rounded-lg py-2 text-base after:absolute after:top-8 after:h-[4px] after:w-0 after:transition-all after:duration-300 after:ease-in-out after:content-[''] after:hover:w-full after:hover:bg-blue-400"
     >
       Deals
     </li>
     <li
-      class="relative flex cursor-pointer items-center justify-between rounded-lg py-4 text-lg after:absolute after:top-11 after:h-[4px] after:w-0 after:transition-all after:duration-300 after:ease-in-out after:content-[''] after:hover:w-full after:hover:bg-blue-400"
+      class="relative flex cursor-pointer items-center justify-between rounded-lg py-2 text-base after:absolute after:top-8 after:h-[4px] after:w-0 after:transition-all after:duration-300 after:ease-in-out after:content-[''] after:hover:w-full after:hover:bg-blue-400"
     >
       What's new
     </li>
     <li
-      class="relative flex cursor-pointer items-center justify-between rounded-lg py-4 text-lg after:absolute after:top-11 after:h-[4px] after:w-0 after:transition-all after:duration-300 after:ease-in-out after:content-[''] after:hover:w-full after:hover:bg-blue-400"
+      class="relative flex cursor-pointer items-center justify-between rounded-lg py-2 text-base after:absolute after:top-8 after:h-[4px] after:w-0 after:transition-all after:duration-300 after:ease-in-out after:content-[''] after:hover:w-full after:hover:bg-blue-400"
     >
       About us
     </li>
