feat: adding home page banner slider

--- a/src/app/pages/home-page/components/rating/rating.component.html
+++ b/src/app/pages/home-page/components/rating/rating.component.html
@@ -1,4 +1,4 @@
-<div class="mb-2 flex items-center gap-2">
+<div class="flex items-center gap-2">
   <div class="flex items-center">
     <ng-container *ngFor="let star of [1, 2, 3, 4, 5]">
       <i-feather
