--- a/src/app/pages/home-page/components/card/card.component.html
+++ b/src/app/pages/home-page/components/card/card.component.html
@@ -1,30 +1,32 @@
 <section
-  class="flex w-[250px] flex-col rounded-[17px] border-[1px] border-solid border-slate-200 lg:w-64"
+  class="lg-h-72 relative flex h-[250px] w-[160px] flex-col md:w-48 lg:w-52"
 >
   <figure
-    class="relative grid h-40 place-items-center rounded-t-[17px] bg-slate-100 shadow-sm lg:w-full lg:p-5"
+    class="relative grid h-40 place-items-center rounded-md bg-slate-100 shadow-sm lg:w-full"
   >
     <img
-      [ngSrc]="product.images[0]"
+      srcset="
+        {{product.images[0]}}  320w,
+        {{product.images[1]}}  640w,
+        {{product.images[2]}} 1280w
+      "
       alt="product image"
-      class="max-w-full rounded-t-[17px]"
-      fill
+      class="max-w-full object-cover object-center"
+      width="160"
+      height="160"
       loading="lazy"
     />
   </figure>
-  <div class="rounded-b-[17px] px-2 py-4">
-    <div class="mb-2 flex justify-between font-bold">
-      <p class="max-w-[70%]">{{ product.title }}</p>
-      <div class="flex h-7 max-w-[30%]">
-        <span class="text-[10px]">$</span>
-        <p class="self-center">{{ cost }}</p>
-      </div>
+  <div class="rounded-b-[17px] px-2 py-3">
+    <div class="relative mb-2">
+      <p class="max-w-full cursor-default truncate text-sm">
+        {{ product.title }}
+      </p>
+    </div>
+    <div class="flex h-7 max-w-[30%] text-base">
+      <span class="text-[10px]">$</span>
+      <p class="self-center">{{ cost }}</p>
     </div>
     <app-rating [rating]="3" [amountOfRatings]="5"></app-rating>
-    <app-button
-      text="Add to cart"
-      icon="shopping-cart"
-      iconClass="w-18px-important h-18px-important"
-    ></app-button>
   </div>
 </section>
