--- a/src/app/pages/home-page/components/product-grid/product-grid.component.html
+++ b/src/app/pages/home-page/components/product-grid/product-grid.component.html
@@ -1,5 +1,5 @@
 <div
-  class="my-4 grid grid-cols-1 gap-y-4 md:grid-cols-2 md:gap-x-32 lg:mx-auto lg:grid-cols-5 lg:gap-x-16"
+  class="mx-auto my-4 grid grid-cols-2 gap-x-0 gap-y-4 p-0 px-3 md:w-full md:max-w-[80vw] md:grid-cols-3 md:gap-x-0 md:px-0 lg:mx-auto lg:grid-cols-3 lg:gap-x-16 xl:grid-cols-7 xl:gap-x-1"
 >
   <app-card
     *ngFor="let item of data"
