--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,4 +1,3 @@
-<section class="mx-auto my-0 max-w-[80vw] p-0">
-  <app-selling-points></app-selling-points>
-  <app-product-grid></app-product-grid>
-</section>
+<app-product-silder></app-product-silder>
+<!-- <app-selling-points></app-selling-points> -->
+<!-- <app-product-grid></app-product-grid> -->
