perf: font loading optimization has been implemented  and product slider img fetch priority has been changed

--- a/src/app/pages/home-page/components/product-silder/product-silder.component.html
+++ b/src/app/pages/home-page/components/product-silder/product-silder.component.html
@@ -24,7 +24,7 @@
         class="max-w-full object-cover transition-transform duration-300 ease-in-out"
         width="1920"
         height="1080"
-        fetchpriority="low"
+        fetchpriority="high"
         [ngClass]="{
           'translate-x-0': index === 0,
           '-translate-x-full': index === 1,
@@ -37,7 +37,7 @@
         class="max-w-full object-cover transition-transform duration-300 ease-in-out"
         width="1920"
         height="1080"
-        fetchpriority="low"
+        fetchpriority="high"
         [ngClass]="{
           'translate-x-0': index === 0,
           '-translate-x-full': index === 1,
