--- a/src/styles.css
+++ b/src/styles.css
@@ -7,8 +7,7 @@
   font-weight: 400;
   font-style: normal;
   font-named-instance: "Regular";
-  src: url("./assets/fonts/RobotoMono-VariableFont_wght.ttf")
-    format("truetype-variations");
+  src: url("./assets/fonts/RobotoMono-VariableFont_wght.woff") format("woff2");
 }
 
 @font-face {
@@ -16,8 +15,8 @@
   font-weight: 400;
   font-style: italic;
   font-named-instance: "Italic";
-  src: url("./assets/fonts/RobotoMono-Italic-VariableFont_wght.ttf")
-    format("truetype-variations");
+  src: url("./assets/fonts/RobotoMono-Italic-VariableFont_wght.woff")
+    format("woff2");
 }
 
 @layer base {
