--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,3 +1,4 @@
 <app-product-silder></app-product-silder>
+<app-bubbles-slider></app-bubbles-slider>
 <!-- <app-selling-points></app-selling-points> -->
 <!-- <app-product-grid></app-product-grid> -->
