--- a/src/styles.css
+++ b/src/styles.css
@@ -92,4 +92,24 @@
   .-translate-x-200 {
     transform: translate(-200%);
   }
+  .shadow-full-sm {
+    -webkit-box-shadow: rgba(0, 0, 0, 0.11) 0px 4px 14px;
+    -moz-box-shadow: rgba(0, 0, 0, 0.11) 0px 4px 14px;
+    box-shadow: rgba(0, 0, 0, 0.11) 0px 4px 14px;
+  }
+  .slider-container {
+    width: 100%;
+    overflow-x: scroll;
+    scrollbar-width: none; /* Hide the scrollbar for Firefox */
+    -ms-overflow-style: none; /* Hide the scrollbar for IE and Edge */
+    scroll-behavior: smooth;
+  }
+  /* hide scrollbar on chrome base browser */
+  .slider-container::-webkit-scrollbar {
+    display: none;
+  }
+
+  .slider-container::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.2);
+  }
 }
