--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,4 +1,4 @@
-<app-product-silder></app-product-silder>
+<app-banner-silder></app-banner-silder>
 <app-bubbles-slider></app-bubbles-slider>
 <!-- <app-selling-points></app-selling-points> -->
 <!-- <app-product-grid></app-product-grid> -->
