feat(products-slider): products slider has been implemented

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,4 +1,5 @@
 <app-banner-silder></app-banner-silder>
 <app-bubbles-slider></app-bubbles-slider>
+<app-products-slider></app-products-slider>
 <!-- <app-selling-points></app-selling-points> -->
 <!-- <app-product-grid></app-product-grid> -->
