style(card componenent): figure and img tags responsiveness upgraded

--- a/src/app/pages/home-page/components/card/card.component.html
+++ b/src/app/pages/home-page/components/card/card.component.html
@@ -1,8 +1,8 @@
 <section
-  class="lg-h-72 relative flex h-[250px] w-[160px] flex-col md:w-48 lg:w-52"
+  class="lg-h-72 relative flex h-[250px] w-40 flex-col md:h-[300px] md:w-48 lg:h-80 lg:w-52"
 >
   <figure
-    class="relative grid h-40 place-items-center rounded-md bg-slate-100 shadow-sm lg:w-full"
+    class="relative grid h-40 w-40 place-items-center rounded-md bg-slate-100 shadow-sm md:h-48 md:w-48 lg:h-52 lg:w-52"
   >
     <img
       srcset="
@@ -11,9 +11,9 @@
         {{product.images[2]}} 1280w
       "
       alt="product image"
-      class="max-w-full object-cover object-center"
-      width="160"
-      height="160"
+      class="h-full w-full max-w-full object-cover object-center"
+      width="208"
+      height="208"
       loading="lazy"
     />
   </figure>
