style(navbar component): view height and view width properties updated
vh and vw has been updated from svw and  svh to dvw and dvh

--- a/src/app/components/header/navbar/navbar.component.html
+++ b/src/app/components/header/navbar/navbar.component.html
@@ -41,7 +41,7 @@
     />
   </figure>
   <div
-    class="h-100svh w-100svw absolute left-0 top-12 transition-transform duration-300 ease-in-out"
+    class="h-100dvh w-100dvw absolute left-0 top-12 transition-transform duration-300 ease-in-out"
     [ngClass]="{
       'translate-x-0': isToggled,
       '-translate-x-full': !isToggled
@@ -120,14 +120,14 @@
   </figure>
   <div
     role="banner"
-    class="w-100svw h-100svh absolute left-0 top-0 -z-[1] bg-black transition-opacity duration-300 ease-in-out"
+    class="w-100dvw h-100vh absolute left-0 top-0 -z-[1] bg-black transition-opacity duration-300 ease-in-out"
     [ngClass]="{
       'opacity-40 transition-opacity duration-300 ease-in-out': isToggled,
       'pointer-events-none opacity-0': !isToggled
     }"
   ></div>
   <div
-    class="h-100svh w-50svw absolute left-0 top-12 z-10 bg-black text-white opacity-95 transition-transform duration-300 ease-in-out"
+    class="h-100dvh w-50svw absolute left-0 top-12 z-10 bg-black text-white opacity-95 transition-transform duration-300 ease-in-out"
     [ngClass]="{
       'translate-x-0': isToggled,
       '-translate-x-full': !isToggled
