--- a/src/styles.css
+++ b/src/styles.css
@@ -88,6 +88,14 @@
     height: 100vh;
     height: 100svh;
   }
+  .w-100dvw {
+    width: 100vw;
+    width: 100dvw;
+  }
+  .h-100dvh {
+    height: 100vh;
+    height: 100dvh;
+  }
   .w-50svw {
     width: 50vw;
     width: 50svw;
