--- a/src/app/pages/home-page/components/banner-silder/banner-silder.component.html
+++ b/src/app/pages/home-page/components/banner-silder/banner-silder.component.html
@@ -5,6 +5,9 @@
     <picture
       role="presentation"
       class="absolute bottom-0 left-0 right-0 top-0 flex items-center"
+      (touchstart)="onTouchStart($event)"
+      (touchmove)="onTouchMove($event)"
+      (touchend)="onTouchEnd()"
     >
       <img
         [ngSrc]="images[0].url"
