style(home-page): product-slider, banner-slider, and bubbles-slider style updated
responsive layout has been updated in order to improve looks and space usage

--- a/src/app/pages/home-page/components/banner-silder/banner-silder.component.html
+++ b/src/app/pages/home-page/components/banner-silder/banner-silder.component.html
@@ -1,6 +1,6 @@
-<section class="mx-auto my-0 mt-0 w-full p-0 md:mt-7 md:max-w-[80vw]">
+<section class="mx-auto my-0 mt-0 w-full p-0 xl:mt-7 xl:max-w-[80vw]">
   <div
-    class="relative h-[200px] w-full overflow-hidden bg-slate-300 md:h-[360px] md:rounded-[17px] lg:h-[370px] xl:h-[500px]"
+    class="relative h-[200px] w-full overflow-hidden bg-slate-300 md:h-[360px] lg:h-[370px] xl:h-[500px] xl:rounded-[17px]"
   >
     <picture
       role="presentation"
