--- a/src/app/pages/home-page/components/products-slider/products-slider.component.html
+++ b/src/app/pages/home-page/components/products-slider/products-slider.component.html
@@ -1,4 +1,7 @@
-<section class="relative mx-auto my-0 mt-7 w-[80vw]" *ngIf="width <= 1024">
+<section
+  class="relative mx-auto my-0 mt-7 w-[95vw] xl:w-[80vw]"
+  *ngIf="width <= 1024"
+>
   <h2 class="my-5 text-lg font-bold md:text-2xl">Best selling</h2>
   <!-- <div class="slider-button absolute left-0 z-20 bg-cyan-200">
     <button (click)="moveLeft()">Previous</button>
