--- a/src/app/pages/home-page/components/bubbles-slider/bubbles-slider.component.html
+++ b/src/app/pages/home-page/components/bubbles-slider/bubbles-slider.component.html
@@ -1,4 +1,4 @@
-<section class="mx-auto my-0 mt-7 w-[80vw]">
+<section class="mx-auto my-0 mt-7 w-[95vw] xl:w-[80vw]">
   <h2 class="my-5 text-lg font-bold md:text-2xl">May interest you</h2>
   <div class="slider-container z-50">
     <div class="slider-item flex gap-1 md:gap-8 lg:justify-between lg:px-2">
