--- a/src/app/pages/home-page/components/bubbles-slider/bubbles-slider.component.html
+++ b/src/app/pages/home-page/components/bubbles-slider/bubbles-slider.component.html
@@ -19,7 +19,7 @@
             [ngClass]="bubble.classes"
           />
         </picture>
-        <p class="text-xs text-gray-700 lg:text-sm">{{ bubble.title }}</p>
+        <p class="text-xs lg:text-sm">{{ bubble.title }}</p>
       </div>
     </div>
   </div>
