--- a/src/styles.css
+++ b/src/styles.css
@@ -30,7 +30,7 @@
   /* Light Mode Styles */
   @media (prefers-color-scheme: light), (prefers-color-scheme: no-preference) {
     :root {
-      --bg-color: #f3f4f6;
+      --bg-color: #f0f2f4;
       --text-color: #111827;
     }
   }
@@ -44,13 +44,13 @@
 
   :root,
   :root.light {
-    --bg-color: #f3f4f6;
+    --bg-color: #ffffff;
     --text-color: #111827;
   }
 
   :root.dark {
     --bg-color: #1f2937;
-    --text-color: #d1d5db;
+    --text-color: #ffffff;
   }
 
   *,
@@ -165,6 +165,6 @@
     background-color: rgba(0, 0, 0, 0.2);
   }
   .h-nav-screen {
-    height: calc(100vh - 48px);
+    height: calc(100vh - 55px);
   }
 }
